--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,10 +15,14 @@ dependencies:
     path: ../
     
   intl: ^0.20.1
+  
+  bot_toast: ^4.1.0
   cupertino_icons: ^1.0.8
   file_picker: 8.1.4
+  gal: ^2.3.1
   google_fonts: ^6.2.1
   image: ^4.4.0
+  file_saver: ^0.2.14
   firebase_core: ^3.8.1
   firebase_storage: ^12.3.7
   supabase_flutter: ^2.8.1
