--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: pro_image_editor
 description: "A Flutter image editor: Seamlessly enhance your images with user-friendly editing features."
-version: 7.0.1
+version: 7.1.0
 homepage: https://github.com/hm21/pro_image_editor/
 repository: https://github.com/hm21/pro_image_editor/
 issue_tracker: https://github.com/hm21/pro_image_editor/issues/
@@ -43,6 +43,7 @@ dependencies:
   image: ^4.3.0
   mime: ^2.0.0
   vibration: ^2.0.1
+  web: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -57,8 +58,8 @@ dev_dependencies:
 flutter:
   assets:
     - lib/web/web_worker.dart.js
-    - lib/web/web_worker.dart.js.deps
     - lib/web/web_worker.dart.js.map
+    - lib/web/web_worker.dart.wasm
   fonts:
    - family: ProImageEditorIcons
      fonts:
