docs(issues): clarify questions to avoid in issue templates

--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -1,16 +1,23 @@
 name: Question
-description: Please use the discuss tab to ask a question.
+description: If you have a question, please use the Discussions tab instead.
 title: "[Question] "
 labels: ["question"]
 body:
   - type: markdown
     attributes:
       value: |
-       Please use the [discuss](https://github.com/hm21/pro_image_editor/discussions) tab to ask a question.
+        ## Please use the [Discussions](https://github.com/hm21/pro_image_editor/discussions) tab for questions!
+
+        The **Issues** tab is for reporting bugs or suggesting features. For general questions, support, or guidance, the **Discussions** tab is the right place to go. This helps us keep the issues section focused and organized.
+
+        If your question is about how to use a feature or best practices, feel free to search the Discussions tab first, as your question may have already been answered!
+
+        Thank you for your understanding and cooperation.
   - type: input
     id: placeholder
     attributes:
-      label: Please use the discuss tab to ask a question.
-      description: "Please use the discuss tab to ask a question."
+      label: PLEASE USE THE DISCUSS TAB TO ASK A QUESTION!
+      placeholder: PLEASE USE THE DISCUSS TAB TO ASK A QUESTION!
+      description: "PLEASE USE THE DISCUSS TAB TO ASK A QUESTION!"
     validations:
-      required: false
+      required: true
